Fixed spacing on main page

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -92,7 +92,6 @@ div{
 a:link{
     text-decoration: none;
 }
-
 a:visited{ text-decoration: none; }
 
 a:hover{
@@ -165,7 +164,7 @@ h1,h2,h3,h4,h5,h6, p{
 
 .footer{
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     padding: 15vh 0px 3vh 0px;
     
 }
